--- a/_projects/2025-3260final.md
+++ b/_projects/2025-3260final.md
@@ -3,7 +3,7 @@ layout: project
 title: Active Suspension System - Quarter Car
 description: Analysis of Active Suspension System
 technologies: [MATLAB]
-image: /assets/images/cover.png
+image: /assets/images/3260.png
 ---
 
 I contributed to the research and real-world application of the PID based active suspension controller designed for a quarter car. I researched other controller systems, the concepts behind them, and higher degree models
