--- a/_projects/2025-3270.md
+++ b/_projects/2025-3270.md
@@ -10,4 +10,22 @@ Analysis of wrench geometry and selection of material based on safety requiremen
 
 <div style="clear: both;"></div>
 
-![title screen image]({{ "/assets/images/titleScreen.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+![title screen image]({{ "/assets/images/wrench.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+![title screen image]({{ "/assets/images/3270/CAD1.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+![title screen image]({{ "/assets/images/3270/CAD2.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+![title screen image]({{ "/assets/images/3270/CAD3.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+
+The material used for this analysis was alluminum alloy 7075-T6. It has a young's modulus of 10.4E6 psi, and an ultimate strength of about 83 ksi.
+
+![title screen image]({{ "/assets/images/3270/3.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+
+In ASNSYS, the drive of the wrench (yellow) was clamped by giving it a displacement of 0, and a force of 60lbs was applied on the handle on the bottom face applied in the X direction, to simulate a force applied by hand.
+
+![title screen image]({{ "/assets/images/3270/4.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+![title screen image]({{ "/assets/images/3270/5.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+FEM and hand calculated maximum normal stresses different due to geometry of wrench. Originally, there was a stress concentration on the drive of the wrench, however after modifying the “head” of the wrench, the stress concentration moved towards the section that formed an angle. This stress was about 25% larger than the expected max stress. 
+
+The FEM and hand calculated displacement is about the same, however the hand calculation produced a deflection of .25in, while the FEM indicated a displacement of .22in. This can likely be attributed to the geometry, as there towards the head of the wrench (away from where the force is applied) the geometry expands outwards, decreasing effective length slightly
+
+![title screen image]({{ "/assets/images/3270/7.png" | relative_url }}){: .inline-image-m style="width: 100%"}
+The torque wrench sensitivity based on the FEM analysis is 1.55 mV/V which can be seen in the data chart on the left side of the image
