--- a/_projects/2025-3270.md
+++ b/_projects/2025-3270.md
@@ -29,3 +29,5 @@ The FEM and hand calculated displacement is about the same, however the hand cal
 
 ![title screen image]({{ "/assets/images/3270/7.png" | relative_url }}){: .inline-image-m style="width: 100%"}
 The torque wrench sensitivity based on the FEM analysis is 1.55 mV/V which can be seen in the data chart on the left side of the image
+
+A linear gauge of approximately 3-6mm would be placed on the wrench at the specified location (1 in from center of drive) in order to produce the sensitivity calculated.
